--- a/src/app/pages/my-orders/my-orders.page.html
+++ b/src/app/pages/my-orders/my-orders.page.html
@@ -1,46 +1,46 @@
 <app-header-menu titleMain="{{titleMain | uppercase}} {{titleSecondary | statusDeliveryTitle }}"></app-header-menu>
 <ion-content>
   <ion-tabs>
-    <ion-tab-bar slot="bottom">
-      <ion-tab-button [tab]="['orderList/a']">
+    <ion-tab-bar color="light" slot="bottom">
+      <ion-tab-button [tab]="['deliveryList/a']">
         <ion-icon name="{{ iconPendingStatus | statusDeliveryIcon}}"></ion-icon>
         <ion-label>NUEVAS</ion-label>
-        <ion-badge color="tertiary">{{countPendingStatus}}</ion-badge>
+        <ion-badge class="fontSizeNew" *ngIf="countPendingStatus > 0" color="tertiary">{{countPendingStatus}}</ion-badge>
       </ion-tab-button>
-      <ion-tab-button [tab]="['orderList/b']">
+      <ion-tab-button [tab]="['deliveryList/b']">
         <ion-icon name="{{ iconConfirmedStatus | statusDeliveryIcon}}"></ion-icon>
         <ion-label>CONFIRMADAS</ion-label>
-        <ion-badge color="tertiary">{{countConfirmedStatus}}</ion-badge>
+        <ion-badge class="fontSizeNew" *ngIf="countConfirmedStatus > 0" color="tertiary">{{countConfirmedStatus}}</ion-badge>
       </ion-tab-button>
-      <ion-tab-button [tab]="['orderList/a1']">
+      <ion-tab-button [tab]="['deliveryList/a1']">
         <ion-icon name="{{ iconCanceledStatus | statusDeliveryIcon}}"></ion-icon>
         <ion-label>CANCELADAS</ion-label>
-        <ion-badge color="tertiary">{{countCanceledStatus}}</ion-badge>
+        <ion-badge class="fontSizeNew" *ngIf="countCanceledStatus > 0" color="tertiary">{{countCanceledStatus}}</ion-badge>
       </ion-tab-button>
-      <ion-tab-button [tab]="['orderList/c']">
+      <ion-tab-button [tab]="['deliveryList/c']">
         <ion-icon name="{{ iconPreparingStatus | statusDeliveryIcon}}"></ion-icon>
         <ion-label>EN PREPARACIÓN</ion-label>
-        <ion-badge color="tertiary">{{countPreparingStatus}}</ion-badge>
+        <ion-badge class="fontSizeNew" *ngIf="countPreparingStatus > 0" color="tertiary">{{countPreparingStatus}}</ion-badge>
       </ion-tab-button>
-      <ion-tab-button [tab]="['orderList/d']">
+      <ion-tab-button [tab]="['deliveryList/d']">
         <ion-icon name="{{ iconAssignedStatus | statusDeliveryIcon}}"></ion-icon>
         <ion-label>ASIGNADAS</ion-label>
-        <ion-badge color="tertiary">{{countAssignedStatus}}</ion-badge>
+        <ion-badge class="fontSizeNew" *ngIf="countAssignedStatus > 0" color="tertiary">{{countAssignedStatus}}</ion-badge>
       </ion-tab-button>
-      <ion-tab-button [tab]="['orderList/e']">
+      <ion-tab-button [tab]="['deliveryList/e']">
         <ion-icon name="{{ iconOnWayStatus | statusDeliveryIcon}}"></ion-icon>
         <ion-label>EN CAMINO</ion-label>
-        <ion-badge color="tertiary">{{countOnWayStatus}}</ion-badge>
+        <ion-badge class="fontSizeNew" *ngIf="countOnWayStatus > 0" color="tertiary">{{countOnWayStatus}}</ion-badge>
       </ion-tab-button>
-      <ion-tab-button [tab]="['orderList/f']">
+      <ion-tab-button [tab]="['deliveryList/f']">
         <ion-icon name="{{ iconCompleteStatus | statusDeliveryIcon}}"></ion-icon>
         <ion-label>ENTREGADAS</ion-label>
-        <ion-badge color="tertiary">{{countCompleteStatus}}</ion-badge>
+        <ion-badge class="fontSizeNew" *ngIf="countCompleteStatus > 0" color="tertiary">{{countCompleteStatus}}</ion-badge>
       </ion-tab-button>
-      <ion-tab-button [tab]="['orderList/f1']">
+      <ion-tab-button [tab]="['deliveryList/f1']">
         <ion-icon name="{{ iconFailtStatus | statusDeliveryIcon}}"></ion-icon>
         <ion-label>FALLIDAS</ion-label>
-        <ion-badge color="tertiary">{{countFailtStatus}}</ion-badge>
+        <ion-badge class="fontSizeNew" *ngIf="countFailtStatus > 0" color="tertiary">{{countFailtStatus}}</ion-badge>
       </ion-tab-button>
     </ion-tab-bar>
   </ion-tabs>
