--- a/src/app/pages/my-orders/components/delivery-list/delivery-list.component.html
+++ b/src/app/pages/my-orders/components/delivery-list/delivery-list.component.html
@@ -1,35 +1,86 @@
 <ion-content>
   <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
-    <ion-refresher-content 
-      pullingIcon="chevron-down-circle-outline" 
-      pullingText="Actualizar Pedidos"
-      refreshingSpinner="circular"
-      refreshingText="Actualizando Pedidos">
+    <ion-refresher-content pullingIcon="chevron-down-circle-outline" pullingText="Actualizar Pedidos"
+      refreshingSpinner="circular" refreshingText="Actualizando Pedidos">
     </ion-refresher-content>
   </ion-refresher>
-  <ion-list [ngSwitch]="emptyGroup">
+  <ion-list [ngSwitch]="emptyList">
     <ion-item *ngSwitchCase="'a'" lines="none">
-      <ion-text color="medium" class="ion-text-center">
-        <h3>NO HAY ENTREGAS PENDIENTES</h3>
-      </ion-text>
+      <ion-label>
+        <ion-text color="medium" class="ion-align-items-center ion-justify-content-center ion-text-center">
+          <h3>NO HAY ORDENES NUEVAS</h3>
+        </ion-text>
+      </ion-label>
     </ion-item>
     <ion-item *ngSwitchCase="'b'" lines="none">
-      <ion-text color="medium" class="ion-text-center">
-        <h3>AUN NO HAY ENTREGAS FINALIZADAS</h3>
-      </ion-text>
+      <ion-label>
+        <ion-text color="medium" class="ion-align-items-center ion-justify-content-center ion-text-center">
+          <h3>NO HAY ORDENES CONFIRMADAS</h3>
+        </ion-text>
+      </ion-label>
+    </ion-item>
+    <ion-item *ngSwitchCase="'a1'" lines="none">
+      <ion-label>
+        <ion-text class="ion-align-items-center ion-justify-content-center ion-text-center" color="medium">
+          <h3>NO HAY ORDENES CANCELADAS</h3>
+        </ion-text>
+      </ion-label>
+    </ion-item>
+    <ion-item *ngSwitchCase="'c'" lines="none">
+      <ion-label>
+        <ion-text color="medium" class="ion-align-items-center ion-justify-content-center ion-text-center">
+          <h3>NO HAY ORDENES EN PREPARACIÓN</h3>
+        </ion-text>
+      </ion-label>
+    </ion-item>
+    <ion-item *ngSwitchCase="'d'" lines="none">
+      <ion-label>
+        <ion-text color="medium" class="ion-align-items-center ion-justify-content-center ion-text-center">
+          <h3>NO HAY ORDENES ASIGNADAS</h3>
+        </ion-text>
+      </ion-label>
+    </ion-item>
+    <ion-item *ngSwitchCase="'e'" lines="none">
+      <ion-label>
+        <ion-text color="medium" class="ion-align-items-center ion-justify-content-center ion-text-center">
+          <h3>NO HAY ORDENES EN CAMINO</h3>
+        </ion-text>
+      </ion-label>
+    </ion-item>
+    <ion-item *ngSwitchCase="'f'" lines="none">
+      <ion-label>
+        <ion-text color="medium" class="ion-align-items-center ion-justify-content-center ion-text-center">
+          <h3>NO HAY ORDENES COMPLETADAS</h3>
+        </ion-text>
+      </ion-label>
+    </ion-item>
+    <ion-item *ngSwitchCase="'f1'" lines="none">
+      <ion-label>
+        <ion-text color="medium" class="ion-align-items-center ion-justify-content-center ion-text-center">
+          <h3>NO HAY ORDENES FALLIDAS</h3>
+        </ion-text>
+      </ion-label>
     </ion-item>
     <div *ngSwitchDefault>
       <ion-item-sliding *ngFor="let a of pizzaDeliveries" [ngSwitch]="a.status.statusId">
         <ion-item [ngSwitch]="a.status.statusId"
-          [routerLink]="['/delivery-detail', a.deliveryId, a.status.statusId, a.customer.name, a.customer.phone, a.assignDate, a.deliveryDate ]">
-          <ion-icon *ngSwitchCase="'a'" slot="start" name="{{ iconPendingStatus | statusDeliveryIcon}}" color="success"></ion-icon>
-          <ion-icon *ngSwitchCase="'b'" slot="start" name="{{ iconConfirmedStatus | statusDeliveryIcon}}" color="success"></ion-icon>
-          <ion-icon *ngSwitchCase="'a1'" slot="start" name="{{ iconCanceledStatus | statusDeliveryIcon}}" color="danger"></ion-icon>
-          <ion-icon *ngSwitchCase="'c'" slot="start" name="{{ iconPreparingStatus | statusDeliveryIcon}}" color="success"></ion-icon>
-          <ion-icon *ngSwitchCase="'d'" slot="start" name="{{ iconAssignedStatus | statusDeliveryIcon}}" color="success"></ion-icon>
-          <ion-icon *ngSwitchCase="'e'" slot="start" name="{{ iconOnWayStatus | statusDeliveryIcon}}" color="success"></ion-icon>
-          <ion-icon *ngSwitchCase="'f'" slot="start" name="{{ iconCompleteStatus | statusDeliveryIcon}}" color="success"></ion-icon>
-          <ion-icon *ngSwitchCase="'f1'" slot="start" name="{{ iconFailtStatus | statusDeliveryIcon}}" color="danger"></ion-icon>
+        [routerLink]="['/delivery-detail', a.deliveryId, a.status.statusId, a.customer.name, a.customer.phone, a.orderDate, a.confirmDate, a.preparingDate, a.assignDate, a.onWayDate, a.deliveryDate, a.totalAmount ]">
+          <ion-icon *ngSwitchCase="'a'" slot="start" name="{{ iconPendingStatus | statusDeliveryIcon}}" color="success">
+          </ion-icon>
+          <ion-icon *ngSwitchCase="'b'" slot="start" name="{{ iconConfirmedStatus | statusDeliveryIcon}}"
+            color="success"></ion-icon>
+          <ion-icon *ngSwitchCase="'a1'" slot="start" name="{{ iconCanceledStatus | statusDeliveryIcon}}"
+            color="danger"></ion-icon>
+          <ion-icon *ngSwitchCase="'c'" slot="start" name="{{ iconPreparingStatus | statusDeliveryIcon}}"
+            color="success"></ion-icon>
+          <ion-icon *ngSwitchCase="'d'" slot="start" name="{{ iconAssignedStatus | statusDeliveryIcon}}"
+            color="success"></ion-icon>
+          <ion-icon *ngSwitchCase="'e'" slot="start" name="{{ iconOnWayStatus | statusDeliveryIcon}}" color="success">
+          </ion-icon>
+          <ion-icon *ngSwitchCase="'f'" slot="start" name="{{ iconCompleteStatus | statusDeliveryIcon}}"
+            color="success"></ion-icon>
+          <ion-icon *ngSwitchCase="'f1'" slot="start" name="{{ iconFailtStatus | statusDeliveryIcon}}" color="danger">
+          </ion-icon>
           <ion-label>
             <ion-text color="success">
               <h1>{{a.deliveryId | uppercase}}</h1>
@@ -50,34 +101,123 @@
               <h1><strong>{{a.totalAmount | currency:'MXN' }}</strong></h1>
             </ion-text>
           </ion-label>
-          <ion-label
-            *ngSwitchCase="a.status.statusId === 'd' || a.status.statusId === 'e' || a.status.statusId === 'f1' ? a.status.statusId : '' ">
-            <h2>
-              <ion-icon color="success" class="ion-padding-end" name="bicycle-outline"></ion-icon>{{a.agent.name | uppercase}}
-            </h2>
-          </ion-label>
-          <ion-label *ngSwitchCase="a.status.statusId === 'a' || a.status.statusId === 'a1' ? a.status.statusId : '' ">
-            <h2>
-              <ion-icon color="success" class="ion-padding-end" name="call-outline"></ion-icon>{{a.customer.phone | uppercase}}
-            </h2>
-          </ion-label>
-          <ion-label *ngSwitchCase="a.status.statusId === 'f' ? a.status.statusId : '' ">
-            <h2>
-              <ion-icon color="success" class="ion-padding-end" name="bicycle-outline"></ion-icon>{{a.agent.name | uppercase}}
-            </h2>
-            <h2>
-              <ion-icon color="success" class="ion-padding-end" name="stopwatch-outline"></ion-icon>{{a.deliveryDate | date:
-              'HH:mm:ss'}}
-            </h2>
-          </ion-label>
+          <ion-item lines="none"
+            *ngSwitchCase="a.status.statusId === 'a' || a.status.statusId === 'a1' ? a.status.statusId : '' ">
+            <ion-icon color="success" class="ion-padding-end" name="call-sharp"></ion-icon>
+            <ion-label>
+              <ion-text color="tertiary" class="ion-text-wrap ion-text-start">
+                <strong>
+                  <span>{{a.customer.phone | prettyPhone }}</span>
+                </strong>
+              </ion-text>
+              <ion-text color="danger" class="ion-text-wrap ion-text-start">
+                <h2>
+                  <ion-icon color="success" class="ion-margin-horizontal" name="megaphone-sharp"></ion-icon>
+                  <ion-badge color="success">{{a.orderDate | date: 'HH:mm:ss'}}</ion-badge>
+                </h2>
+              </ion-text>
+            </ion-label>
+          </ion-item>
+          <ion-item lines="none" *ngSwitchCase="a.status.statusId === 'b' ? a.status.statusId : '' ">
+            <ion-icon color="success" class="ion-padding-end" name="checkmark-done-sharp"></ion-icon>
+            <ion-label>
+              <ion-text color="tertiary" class="ion-text-wrap ion-text-start">
+                <strong>
+                  <span>{{a.confirmDate | date: 'HH:mm:ss'}}</span>
+                </strong>
+              </ion-text>
+            </ion-label>
+          </ion-item>
+          <ion-item lines="none" *ngSwitchCase="a.status.statusId === 'c' ? a.status.statusId : '' ">
+            <ion-icon color="success" class="ion-padding-end" name="hourglass-sharp"></ion-icon>
+            <ion-label>
+              <ion-text color="tertiary" class="ion-text-wrap ion-text-start">
+                <strong>
+                  <span>{{a.preparingDate | date: 'HH:mm:ss'}}</span>
+                </strong>
+              </ion-text>
+            </ion-label>
+          </ion-item>
+          <ion-item lines="none" *ngSwitchCase="a.status.statusId === 'd' ? a.status.statusId : '' ">
+            <ion-icon color="success" class="ion-padding-end" name="bicycle-sharp"></ion-icon>
+            <ion-label>
+              <ion-text color="tertiary" class="ion-text-wrap ion-text-start">
+                <strong>
+                  <span>{{a.agent.name | uppercase}}</span>
+                </strong>
+              </ion-text>
+              <ion-text color="danger" class="ion-text-wrap ion-text-start">
+                <h2>
+                  <ion-icon color="success" class="ion-margin-horizontal" name="time-sharp"></ion-icon>
+                  <ion-badge color="success">{{a.assignDate | date: 'HH:mm:ss'}}</ion-badge>
+                </h2>
+              </ion-text>
+            </ion-label>
+          </ion-item>
+          <ion-item lines="none" *ngSwitchCase="a.status.statusId === 'e' ? a.status.statusId : '' ">
+            <ion-icon color="success" class="ion-padding-end" name="bicycle-sharp"></ion-icon>
+            <ion-label>
+              <ion-text color="tertiary" class="ion-text-wrap ion-text-start">
+                <strong>
+                  <span>{{a.agent.name | uppercase}}</span>
+                </strong>
+              </ion-text>
+              <ion-text color="danger" class="ion-text-wrap ion-text-start">
+                <h2>
+                  <ion-icon color="success" class="ion-margin-horizontal" name="timer-sharp"></ion-icon>
+                  <ion-badge color="success">{{a.assignDate | date: 'HH:mm:ss'}}</ion-badge>
+                </h2>
+              </ion-text>
+            </ion-label>
+          </ion-item>
+          <ion-item lines="none"
+            *ngSwitchCase="a.status.statusId === 'f' ? a.status.statusId : '' ">
+            <ion-icon color="success" class="ion-padding-end" name="bicycle-sharp"></ion-icon>
+            <ion-label>
+              <ion-text color="tertiary" class="ion-text-wrap ion-text-start">
+                <strong>
+                  <span>{{a.agent.name | uppercase}}</span>
+                </strong>
+              </ion-text>
+              <ion-text color="success"  class="ion-text-wrap ion-text-start">
+                <h2>
+                  <ion-icon color="success" class="ion-margin-horizontal" name="stopwatch-sharp"></ion-icon>
+                  <ion-badge color="success">{{a.deliveryDate | date: 'HH:mm:ss'}}</ion-badge>
+                </h2>
+              </ion-text>
+            </ion-label>
+          </ion-item>
+          <ion-item lines="none"
+            *ngSwitchCase="a.status.statusId === 'f1' ? a.status.statusId : '' ">
+            <ion-icon color="success" class="ion-padding-end" name="bicycle-sharp"></ion-icon>
+            <ion-label>
+              <ion-text color="tertiary" class="ion-text-wrap ion-text-start">
+                <strong>
+                  <span>{{a.agent.name | uppercase}}</span>
+                </strong>
+              </ion-text>
+              <ion-text color="danger"  class="ion-text-wrap ion-text-start">
+                <h2>
+                  <ion-icon color="danger" class="ion-margin-horizontal" name="alert-circle-sharp"></ion-icon>
+                  <ion-badge color="danger">{{a.typeFailId | typeFailTitle | uppercase}}</ion-badge >
+                </h2>
+              </ion-text>
+            </ion-label>
+          </ion-item>
         </ion-item>
         <ion-item-options side="end">
-          <ion-item-option color="success" *ngSwitchCase="'a'" (click)="changeDeliveryStatus(a.deliveryId, 'b')">CONFIRMAR</ion-item-option>
-          <ion-item-option color="danger" *ngSwitchCase="'a'" (click)="changeDeliveryStatus(a.deliveryId, 'a1')">CANCELAR</ion-item-option>
-          <ion-item-option color="success" *ngSwitchCase="'b'" (click)="changeDeliveryStatus(a.deliveryId, 'c')">INICIAR PREPARACIÓN</ion-item-option>
-          <ion-item-option color="success" *ngSwitchCase="'a1'" (click)="changeDeliveryStatus(a.deliveryId, 'a')">REACTIVAR</ion-item-option>
-          <ion-item-option color="tertiary" *ngSwitchCase="'a1'" (click)="changeDeliveryStatus(a.deliveryId, 'b')">REACTIVAR & CONFIRMAR</ion-item-option>
-          <ion-item-option color="success" *ngSwitchCase="'c'" (click)="changeDeliveryStatus(a.deliveryId, 'd')">ASIGNAR</ion-item-option>
+          <ion-item-option color="success" *ngSwitchCase="'a'" (click)="changeDeliveryStatus(a.deliveryId, 'b')">
+            CONFIRMAR</ion-item-option>
+          <ion-item-option color="danger" *ngSwitchCase="'a'" (click)="changeDeliveryStatus(a.deliveryId, 'a1')">
+            CANCELAR</ion-item-option>
+          <ion-item-option color="success" *ngSwitchCase="'b'" (click)="changeDeliveryStatus(a.deliveryId, 'c')">INICIAR
+            PREPARACIÓN</ion-item-option>
+          <ion-item-option color="success" *ngSwitchCase="'a1'" (click)="changeDeliveryStatus(a.deliveryId, 'a')">
+            REACTIVAR</ion-item-option>
+          <ion-item-option color="tertiary" *ngSwitchCase="'a1'" (click)="changeDeliveryStatus(a.deliveryId, 'b')">
+            REACTIVAR & CONFIRMAR</ion-item-option>
+          <ion-item-option color="success" *ngSwitchCase="'c'" (click)="changeDeliveryStatus(a.deliveryId, 'd')">ASIGNAR
+          </ion-item-option>
         </ion-item-options>
       </ion-item-sliding>
     </div>
