--- a/src/app/pages/my-orders/components/delivery-list/delivery-list.component.html
+++ b/src/app/pages/my-orders/components/delivery-list/delivery-list.component.html
@@ -198,7 +198,7 @@
               </ion-text>
               <ion-text color="danger"  class="ion-text-wrap ion-text-start">
                 <h2>
-                  <ion-icon color="danger" class="ion-margin-horizontal" name="alert-circle-sharp"></ion-icon>
+                  <ion-icon color="danger" class="ion-margin-horizontal" name="alert-sharp"></ion-icon>
                   <ion-badge color="danger">{{a.typeFailId | typeFailTitle | uppercase}}</ion-badge >
                 </h2>
               </ion-text>
