--- a/src/app/pages/delivery-detail/components/progress-bar-delivery/progress-bar-delivery.component.html
+++ b/src/app/pages/delivery-detail/components/progress-bar-delivery/progress-bar-delivery.component.html
@@ -14,7 +14,7 @@
         </ion-item>
       </ion-col>
       <ion-col size="2">
-        <ion-item [ngSwitch]="dataOfStatusBar.currentStatus" lines="none">
+        <ion-item [ngSwitch]="dataOfStatusBar.status.statusId" lines="none">
           <ion-icon *ngSwitchDefault slot="start" name="{{ iconConfirmedStatus | statusDeliveryIcon}}" color="{{arrayStatusColors[1]}}"></ion-icon>
           <ion-icon *ngSwitchCase="'a1'" slot="start" name="{{ iconCanceledStatus | statusDeliveryIcon}}"  color="danger"></ion-icon>
           <ion-label>
